--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#aboutus">About Us</a></li>
-								<li><a href="#highlight">Highlight</a></li>
-								<li><a href="#gallery">Gallery</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#ourstory"> 关于我们</a></li>
+								<li><a href="#team">团队</a></li>
+								<li><a href="#highlight">活动投稿</a></li>
+								<li><a href="#gallery">作品展示</a></li>
+								<li><a href="#contact">联系方式</a></li>
+								
 							<!--<li><a href="#elements">Elements</a></li>--->
 							</ul>
 						</nav>
@@ -40,18 +42,63 @@
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- About Us -->
-							<article id="aboutus">
-								<h2 class="major">About Us</h2>
+						<!-- Our Story -->
+							<article id="ourstory">
+								<h2 class="major">关于我们</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>
+华人摄影协会（Asian Photography Association, APA）成立于2025年，总部位于美国西雅图，是一群由热爱摄影和公益活动的华裔摄影师们发起的非盈利社群组织。我们致力于为社区文化交流提供服务， 定期举办公益讲座，免费为摄影爱好者提供摄影技术培训与指导，同时积极推动亚裔摄影师与媒体，艺术机构建立联系与合作。我们积极搭建一个集摄影作品展示、技术经验交流、资源互助分享于一体的开放平台，致力于打造一个充满活力、包容与成长的摄影社群。
+通过摄影这一艺术语言，我们希望连接不同文化，记录精彩生活。无论你是摄影初学者，还是有经验的摄影师，我们希望助力大家一起成长，让更多美好故事被看见！</p>
+							</article>
+
+						<!-- Team -->
+							<article id="team" class="wrapper">
+								<h2 class="major">我们的团队</h2>
+								<div class="person-list">
+
+									<!-- 人物 1 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/people01.png" alt="大宝">
+										</div>
+										<div class="person-info">
+										<h3>xxx</h3>
+										<p>喜欢用镜头记录真实的街头瞬间，关注城市与人之间的温度。</p>
+										<a href="#" class="special">了解更多</a>
+										</div>
+									</div>
+
+									<!-- 人物 2 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/people02.png" alt="本宝">
+										</div>
+										<div class="person-info">
+										<h3>xxx</h3>
+										<p>专注女性影像叙事，致力于通过影像推动社会对性别议题的关注。</p>
+										<a href="#" class="special">了解更多</a>
+										</div>
+									</div>
+
+									<!-- 人物 2 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/people03.png" alt="本宝">
+										</div>
+										<div class="person-info">
+										<h3>xxx</h3>
+										<p>专注女性影像叙事，致力于通过影像推动社会对性别议题的关注。</p>
+										<a href="#" class="special">了解更多</a>
+										</div>
+									</div>
+    							</div>
+  							
+
 							</article>
 
 						<!-- Hightlight Event -->
 							<article id="highlight">
-								<h2 class="major">Highlight Event</h2>
+								<h2 class="major">活动投稿</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Event Description</p>
 								<h3 class="major">Submit your photo</h3>
@@ -90,15 +137,24 @@
 							</article>
 
 						<!-- Gallery -->
+						<!-- old
+							<section id="gallery" class="wrapper style3">
+								<div class="inner">
+									<h2 class="major">探索我们的摄影作品</h2>
+									<a href="gallery.html" class="button">进入图库</a>
+								</div>
+							</section>
+						-->
 							<article id="gallery">
-								<h2 class="major">Gallery</h2>
+								<h2 class="major">探索我们的摄影作品</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<a href="gallery.html" class="button">进入图库</a>
+								<p>如果需要文字的话，一段介绍</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">联系方式</h2>
 								<form method="post" action="https://formspree.io/f/movwrowz" >
 									<div class="fields">
 										<div class="field half">
