--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Asian Photography Assosication</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Asian Photography Association</h1>
-								<p>Asian Photography Association brings together photographers and visual storytellers to support community voices and cultural expression </p>
+								<p>The Asian Photography Association (APA) is a non-profit community based in Seattle, founded by passionate Chinese photographers in 2025. We are dedicated to fostering cultural exchange, sharing photography skills, and building meaningful connections across communities and art institutions. Through the art of photography, we capture life’s light, colors, and human warmth — helping everyone grow together and share more beautiful stories. </p>
 							</div>
 						</div>
 						<nav>
@@ -47,8 +47,9 @@
 								<h2 class="major">关于我们</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>
-华人摄影协会（Asian Photography Association, APA）成立于2025年，总部位于美国西雅图，是一群由热爱摄影和公益活动的华裔摄影师们发起的非盈利社群组织。我们致力于为社区文化交流提供服务， 定期举办公益讲座，免费为摄影爱好者提供摄影技术培训与指导，同时积极推动亚裔摄影师与媒体，艺术机构建立联系与合作。我们积极搭建一个集摄影作品展示、技术经验交流、资源互助分享于一体的开放平台，致力于打造一个充满活力、包容与成长的摄影社群。
-通过摄影这一艺术语言，我们希望连接不同文化，记录精彩生活。无论你是摄影初学者，还是有经验的摄影师，我们希望助力大家一起成长，让更多美好故事被看见！</p>
+								华人摄影协会（Asian Photography Association, APA）成立于2025年，总部位于美国西雅图，由一群热爱摄影与公益的华裔摄影师发起，是一个非盈利社群组织。我们致力于为社区文化交流搭建桥梁，定期举办公益讲座，免费为摄影爱好者提供技术培训与指导，同时积极推动亚裔摄影师与媒体、艺术机构建立联系与合作。我们努力打造一个集摄影作品展示、技术经验交流、资源互助于一体的开放平台，构建一个充满活力、包容与支持的摄影社群。
+我们希望通过摄影这一独特的艺术语言，去捕捉生活中的光影与色彩，记录自然与人文的温度，连接多元文化与彼此的心灵，助力大家共同成长，让更多美好被看见，更多故事被分享。
+								</p>
 							</article>
 
 						<!-- Team -->
@@ -59,36 +60,84 @@
 									<!-- 人物 1 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/people01.png" alt="大宝">
+										<img src="images/people/carrie.jpg" alt="Carrie Zhao">
 										</div>
 										<div class="person-info">
-										<h3>xxx</h3>
-										<p>喜欢用镜头记录真实的街头瞬间，关注城市与人之间的温度。</p>
-										<a href="#" class="special">了解更多</a>
+										<h3>Carrie Zhao</h3>
+										<p>会长</p>
+										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
 
 									<!-- 人物 2 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/people02.png" alt="本宝">
+										<img src="images/people/louis.jpg" alt="Louis Yang">
 										</div>
 										<div class="person-info">
-										<h3>xxx</h3>
-										<p>专注女性影像叙事，致力于通过影像推动社会对性别议题的关注。</p>
-										<a href="#" class="special">了解更多</a>
+										<h3>Louis Yang</h3>
+										<p>副会长，技术指导，摄影教学导师</p>
+										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
 
-									<!-- 人物 2 -->
+									<!-- 人物 3 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/people03.png" alt="本宝">
+										<img src="images/people/Anna.jpg" alt="Anna Peng">
 										</div>
 										<div class="person-info">
-										<h3>xxx</h3>
-										<p>专注女性影像叙事，致力于通过影像推动社会对性别议题的关注。</p>
-										<a href="#" class="special">了解更多</a>
+										<h3>Anna Peng</h3>
+										<p>策划负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+
+									<!-- 人物 4 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/amy.jpg" alt="Amy Yang">
+										</div>
+										<div class="person-info">
+										<h3>Amy Yang</h3>
+										<p>财务负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+
+									<!-- 人物 5 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/feng.jpg" alt="李枫">
+										</div>
+										<div class="person-info">
+										<h3>李枫</h3>
+										<p>志愿者负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+									
+									<!-- 人物 6 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/penny.jpg" alt="Penny">
+										</div>
+										<div class="person-info">
+										<h3>Penny</h3>
+										<p>公关负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+
+									<!-- 人物 7 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/tobby.jpg" alt="Tobby">
+										</div>
+										<div class="person-info">
+										<h3>Tobby</h3>
+										<p>运营负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
     							</div>
@@ -149,7 +198,7 @@
 								<h2 class="major">探索我们的摄影作品</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<a href="gallery.html" class="button">进入图库</a>
-								<p>如果需要文字的话，一段介绍</p>
+								<p>我们的图库收录了在会摄影师拍摄的珍贵影像，记录下社区生活、文化传统与社会变迁的真实瞬间。我们希望用影像守护记忆、启发行动、连接彼此。</p>
 							</article>
 
 						<!-- Contact -->
