--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 									<!-- 人物 5 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/feng.jpg" alt="李枫">
+										<img src="images/people/feng.jpg" alt="Feng Li">
 										</div>
 										<div class="person-info">
-										<h3>李枫</h3>
+										<h3>Feng Li</h3>
 										<p>志愿者负责人</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
@@ -120,10 +120,10 @@
 									<!-- 人物 6 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/penny.jpg" alt="Penny">
+										<img src="images/people/penny.jpg" alt="Penny Mao">
 										</div>
 										<div class="person-info">
-										<h3>Penny</h3>
+										<h3>Penny Mao</h3>
 										<p>公关负责人</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
@@ -132,10 +132,10 @@
 									<!-- 人物 7 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/tobby.jpg" alt="Tobby">
+										<img src="images/people/tobby.jpg" alt="Tobby Zhao">
 										</div>
 										<div class="person-info">
-										<h3>Tobby</h3>
+										<h3>Tobby Zhao</h3>
 										<p>运营负责人</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
