--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#team">团队</a></li>
 								<li><a href="#highlight">活动投稿</a></li>
 								<li><a href="#gallery">作品展示</a></li>
-								<li><a href="#contact">联系方式</a></li>
+								<li><a href="#contact">联系我们</a></li>
 								
 							<!--<li><a href="#elements">Elements</a></li>--->
 							</ul>
@@ -132,10 +132,10 @@
 									<!-- 人物 7 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/tobby.jpg" alt="Tobby Zhao">
+										<img src="images/people/toby.jpg" alt="Toby Zhao">
 										</div>
 										<div class="person-info">
-										<h3>Tobby Zhao</h3>
+										<h3>Toby Zhao</h3>
 										<p>运营负责人</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
@@ -203,7 +203,7 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">联系方式</h2>
+								<h2 class="major">联系我们</h2>
 								<form method="post" action="https://formspree.io/f/movwrowz" >
 									<div class="fields">
 										<div class="field half">
