--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Anna Peng</h3>
-										<p>策划负责人</p>
+										<p>策划负责人，网站统筹开发</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -104,8 +104,20 @@
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
-
+									
 									<!-- 人物 5 -->
+									<div class="person-item">
+										<div class="person-avatar">
+										<img src="images/people/chris.jpg" alt="Chris Huang">
+										</div>
+										<div class="person-info">
+										<h3>Chris Huang</h3>
+										<p>软件技术负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+
+									<!-- 人物 6 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/feng.jpg" alt="Feng Li">
@@ -117,7 +129,7 @@
 										</div>
 									</div>
 									
-									<!-- 人物 6 -->
+									<!-- 人物 7 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/penny.jpg" alt="Penny Mao">
@@ -129,7 +141,7 @@
 										</div>
 									</div>
 
-									<!-- 人物 7 -->
+									<!-- 人物 8 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/toby.jpg" alt="Toby Zhao">
