--- a/gallery.html
+++ b/gallery.html
@@ -32,42 +32,42 @@
 								</div>
 
 								<article class="item thumb span-1">
-									<h2>You really got me</h2>
+									<h2>01</h2>
 									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Ad Infinitum</h2>
+									<h2>02</h2>
 									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>Different.</h2>
+									<h2>03</h2>
 									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>Elysium</h2>
+									<h2>04</h2>
 									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-3">
-									<h2>Kingdom of the Wind</h2>
+									<h2>05</h2>
 									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>The Pursuit</h2>
+									<h2>06</h2>
 									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Boundless</h2>
+									<h2>07</h2>
 									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>The Spectators</h2>
+									<h2>08</h2>
 									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
 
@@ -76,15 +76,15 @@
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>The Pursuit</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Boundless</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>The Spectators</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>You really got me</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Ad Infinitum</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Different.</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>Kingdom of the Wind</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Elysium</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>09</h2><a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>06</h2><a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>07</h2><a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>08</h2><a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>01</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>02</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>03</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>05</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>04</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
 
 							</div>
 
