--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!---
-							<span class="icon fa-gem"></span>
-							-->
 							<div class="logo">
 								<img src="images/icon.png" alt="Logo" style="height: 90%; width: auto;" />
 							</div>
@@ -39,8 +36,6 @@
 								<li><a href="#highlight">活动投稿</a></li>
 								<li><a href="#gallery">作品展示</a></li>
 								<li><a href="#contact">联系我们</a></li>
-								
-							<!--<li><a href="#elements">Elements</a></li>--->
 							</ul>
 						</nav>
 					</header>
@@ -125,10 +120,10 @@
 									<!-- 人物 6 -->
 									<div class="person-item">
 										<div class="person-avatar">
-										<img src="images/people/feng.jpg" alt="Feng Li">
+										<img src="images/people/feng.jpg" alt="Leah Li">
 										</div>
 										<div class="person-info">
-										<h3>Feng Li</h3>
+										<h3>Leah Li</h3>
 										<p>志愿者负责人</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
@@ -176,7 +171,7 @@
 
 						<!-- Hightlight Event -->
 							<article id="highlight">
-								<h2 class="major">侨报杯·西雅图华人摄影协会首届摄影展 </h2>
+								<h2 class="major">活动速递</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<h3>侨报杯·西雅图华人摄影协会首届摄影展开始啦</h3>
 								<ul>
