--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 									</ul>
 
 									<h3>征稿截止</h3>
-									<p>作品征集时间8月1日 — 8月31日<br>我们将于9月14日 举行摄影展开幕仪式，展览地点：North Bellevue Community Center/ Tacoma City Hall</p>
+									<p>作品征集时间8月1日 — 8月31日<br>我们将于9月14日 举行摄影展开幕仪式，展览地点：North Bellevue Community Center</p>
 									
 									<h3>作品提交</h3>
 									<ul class="icons">
