--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 									
 									<h3>作品提交</h3>
 									<ul class="icons">
-										<li><a href="mailto: submit@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong>请将参赛作品上传至 submit@asianphotoassociation.com（邮件标题注明“摄影展投稿+姓名+电话号码”）</strong></li>
+										<li><a href="mailto: submit@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong>请将参赛作品上传至 submit@asianphotoassociation.com（邮件标题注明“摄影展投稿+年龄+姓名+电话号码”）</strong></li>
 									</ul>
 									
 									<h3>奖项设置</h3>
