--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								<h3>侨报杯·西雅图华人摄影协会首届摄影展开始啦</h3>
 								<ul>
 									<h3>活动背景</h3>
-									<p>由美中青少年学生交流协会、西雅图华人摄影协会（ASIAN PHOTOGRAPHY ASSOCIATION）与美国格律传媒集团（Rhythm Media Group, Inc)联合主办的“侨报杯·首届西雅图华人摄影协会摄影展”，将于2025年9月14日在华盛顿州贝尔维尤社区中心（North Bellevue Community Center）开幕。
+									<p>由美中青少年学生交流协会、西雅图华人摄影协会（ASIAN PHOTOGRAPHY ASSOCIATION）与美国格律传媒集团（Rhythm Media Group, Inc)联合主办的“侨报杯·首届西雅图华人摄影协会摄影展开始征稿啦。
 本次摄影展旨在展示太平洋西北地区摄影爱好者和青少年代表的摄影作品，搭建中美文化交流平台，鼓励各族裔共同用镜头讲述生活、记录文化、传递视觉语言，展现多元文化交融下的中美视角与西雅图影像故事。活动将结合线下展览和线上投票等不同形式，打造华盛顿州年度最具特色的摄影人文活动。</p>
 									<p>我们旨在展示赴华游学的美国学生、本地华人摄影爱好者及其他社区摄影师作品，促进美中文化交流；搭建摄影爱好者交流与合作平台；增强华人社区凝聚力；吸引主流社会关注华人文化与多元视角。</p>
 									
@@ -198,7 +198,7 @@
 									</ul>
 
 									<h3>征稿截止</h3>
-									<p>作品征集时间8月1日 — 8月31日<br>我们将于9月14日 举行摄影展开幕仪式，展览地点：North Bellevue Community Center</p>
+									<p>作品征集时间8月1日 — 8月31日</p>
 									
 									<h3>作品提交</h3>
 									<ul class="icons">
