--- a/index.html
+++ b/index.html
@@ -270,9 +270,11 @@
 							<article id="contact">
 								<h2 class="major">联系我们</h2>
 								<ul class="icons">
-									<li><a href="mailto: submit@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong>submit@asianphotoassociation.com </strong></li>
-								</ul>
-
+										<li><strong>我们期待与您的合作！</strong></li><br>
+										<li><strong>If you're interested in parterning with us, we’d love to hear from you!</strong></li><br>
+										<li><a href="mailto: pr@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong> pr@asianphotoassociation.com</strong></li>
+									</ul>
+								<!--form 
 								<form method="post" action="https://formspree.io/f/movwrowz" >
 									<div class="fields">
 										<div class="field half">
@@ -306,6 +308,8 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
+								-->
+
 								<!--
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
