--- a/index.html
+++ b/index.html
@@ -273,7 +273,12 @@
 										<li><strong>我们期待与您的合作！</strong></li><br>
 										<li><strong>If you're interested in parterning with us, we’d love to hear from you!</strong></li><br>
 										<li><a href="mailto: pr@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong> pr@asianphotoassociation.com</strong></li>
-									</ul>
+								</ul>
+								<div>
+									<h3>加入会员请扫码</h3>
+									<span class="person-avatar"><img src="images/application_form.png" alt="" style="width: 150px; height: 150px;"/></span>
+								</div>
+								
 								<!--form 
 								<form method="post" action="https://formspree.io/f/movwrowz" >
 									<div class="fields">
