--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
 									<!-- 人物 6 -->
 									<div class="person-item">
 										<div class="person-avatar">
+										<img src="images/people/cloud.jpg" alt="Cloud Qiu">
+										</div>
+										<div class="person-info">
+										<h3>Cloud Qiu</h3>
+										<p>设计负责人</p>
+										<!--<a href="#" class="special">了解更多</a>-->
+										</div>
+									</div>
+
+									<!-- 人物 7 -->
+									<div class="person-item">
+										<div class="person-avatar">
 										<img src="images/people/feng.jpg" alt="Leah Li">
 										</div>
 										<div class="person-info">
@@ -129,7 +141,7 @@
 										</div>
 									</div>
 									
-									<!-- 人物 7 -->
+									<!-- 人物 8 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/junfeng.jpg" alt="Junfeng Jiang">
@@ -141,7 +153,7 @@
 										</div>
 									</div>
 
-									<!-- 人物 8 -->
+									<!-- 人物 9 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/penny.jpg" alt="Penny Mao">
@@ -153,7 +165,7 @@
 										</div>
 									</div>
 
-									<!-- 人物 9 -->
+									<!-- 人物 10 -->
 									<div class="person-item">
 										<div class="person-avatar">
 										<img src="images/people/toby.jpg" alt="Toby Zhao">
