--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 				<!-- Main -->
 					<section id="main">
 
-						<!-- Items -->
+						<!-- first row -->
 							<div class="items">
 
 								<div class="item intro span-2">
@@ -32,59 +32,69 @@
 								</div>
 
 								<article class="item thumb span-1">
-									<h2>01</h2>
-									<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a>
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/leah2.JPG" class="image"><img src="images/thumbs/leah2.png" alt=""></a>
 								</article>
-
-								<article class="item thumb span-2">
-									<h2>02</h2>
-									<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/carrie2.jpeg" class="image"><img src="images/thumbs/carrie2.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/ken1.jpg" class="image"><img src="images/thumbs/ken1.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/ken2.jpg" class="image"><img src="images/thumbs/ken2.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/anna2.png" class="image"><img src="images/thumbs/anna2.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/carrie1.jpg" class="image"><img src="images/thumbs/carrie1.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/anna1.png" class="image"><img src="images/thumbs/anna1.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/haichao1.jpg" class="image"><img src="images/thumbs/haichao1.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/leah3.JPG" class="image"><img src="images/thumbs/leah3.png" alt=""></a>
+								</article>
+								<article class="item thumb span-1">
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/haichao2.jpg" class="image"><img src="images/thumbs/haichao2.png" alt=""></a>
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>03</h2>
-									<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a>
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/coco1.jpg" class="image"><img src="images/thumbs/coco1.png" alt=""></a>
 								</article>
-
 								<article class="item thumb span-1">
-									<h2>04</h2>
-									<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-3">
-									<h2>05</h2>
-									<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-1">
-									<h2>06</h2>
-									<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-2">
-									<h2>07</h2>
-									<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt=""></a>
-								</article>
-
-								<article class="item thumb span-2">
-									<h2>08</h2>
-									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
+									<h2>喜剧节精选</h2>
+									<a href="images/fulls/coco2.jpg" class="image"><img src="images/thumbs/coco2.png" alt=""></a>
 								</article>
 
 							</div>
 
-						<!-- Items -->
+						<!-- second row -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>09</h2><a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>06</h2><a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>07</h2><a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>08</h2><a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>01</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>02</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>03</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
-								<article class="item thumb span-2"><h2>05</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>04</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>会员作品</h2><a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>会员作品</h2><a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>会员作品</h2><a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>会员作品</h2><a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>会员作品</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>会员作品</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>会员作品</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>会员作品</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>会员作品</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
 
 							</div>
 
