--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Asian Photography Association</h1>
-								<p>The Asian Photography Association (APA) is a non-profit community based in Seattle, founded by passionate Chinese photographers in 2025. We are dedicated to fostering cultural exchange, sharing photography skills, and building meaningful connections across communities and art institutions. Through the art of photography, we capture life’s light, colors, and human warmth — helping everyone grow together and share more beautiful stories. </p>
+								<p>The Asian Photography Association (APA) is a non-profit community based in Seattle, founded by passionate Asian photographers in 2025. We are dedicated to fostering cultural exchange, sharing photography skills, and building meaningful connections across communities and art institutions. Through the art of photography, we capture life’s light, colors, and human warmth — helping everyone grow together and share more beautiful stories. </p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#ourstory"> 关于我们</a></li>
-								<li><a href="#team">团队</a></li>
-								<li><a href="#highlight">活动速递</a></li>
-								<li><a href="#gallery">作品展示</a></li>
-								<li><a href="#contact">联系我们</a></li>
+								<li><a href="#ourstory"> About Us</a></li>
+								<li><a href="#team">Our Team</a></li>
+								<li><a href="#highlight">Upcoming</a></li>
+								<li><a href="#gallery">Gallery</a></li>
+								<li><a href="#contact">Contact Us</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -44,9 +44,11 @@
 					<div id="main">
 						<!-- Our Story -->
 							<article id="ourstory">
-								<h2 class="major">关于我们</h2>
+								<h2 class="major">About Us</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>
+								<p>Founded in 2025 and headquartered in Seattle, USA, the Asian Photography Association (APA) is a nonprofit community organization established by a group of passionate Asian photographers who share a love for both photography and public service.
+								<br>
+								We are committed to fostering meaningful cultural exchange within our community.Through regular public workshops, open lectures, and free technical training, APA empowers photography enthusiasts while building lasting connections between Asian photographers, media, art institutions, and cultural organizations.<p>
 								华人摄影协会（Asian Photography Association, APA）成立于2025年，总部位于美国西雅图，由一群热爱摄影与公益的华裔摄影师发起，是一个非盈利社群组织。我们致力于为社区文化交流搭建桥梁，定期举办公益讲座，免费为摄影爱好者提供技术培训与指导，同时积极推动亚裔摄影师与媒体、艺术机构建立联系与合作。我们努力打造一个集摄影作品展示、技术经验交流、资源互助于一体的开放平台，构建一个充满活力、包容与支持的摄影社群。
 我们希望通过摄影这一独特的艺术语言，去捕捉生活中的光影与色彩，记录自然与人文的温度，连接多元文化与彼此的心灵，助力大家共同成长，让更多美好被看见，更多故事被分享。
 								</p>
@@ -54,7 +56,7 @@
 
 						<!-- Team -->
 							<article id="team" class="wrapper">
-								<h2 class="major">我们的团队</h2>
+								<h2 class="major">Our Team</h2>
 								<div class="person-list">
 
 									<!-- 人物 1 -->
@@ -64,7 +66,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Carrie Zhao</h3>
-										<p>会长</p>
+										<p>会长<br>President</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -76,7 +78,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Louis Yang</h3>
-										<p>副会长，技术指导，摄影教学导师</p>
+										<p>副会长，技术指导，摄影教学导师<br>Vice President，Senior Technical Consultant & Photography Educator</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -88,7 +90,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Anna Peng</h3>
-										<p>策划负责人，网站统筹开发</p>
+										<p>执行总监<br>Executive Director</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -100,7 +102,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Amy Yang</h3>
-										<p>财务负责人</p>
+										<p>财务总监<br>Finance Director</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -112,7 +114,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Chris Huang</h3>
-										<p>技术负责人</p>
+										<p>技术总监<br>Head of Technology</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -124,7 +126,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Cloud Qiu</h3>
-										<p>设计负责人</p>
+										<p>设计总监<br>Design Director</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -136,7 +138,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Leah Li</h3>
-										<p>志愿者负责人</p>
+										<p>志愿者发展总监<br>Head of Volunteers</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -148,7 +150,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Junfeng Jiang</h3>
-										<p>技术负责人</p>
+										<p>技术总监<br>Head of Technology</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -160,7 +162,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Penny Mao</h3>
-										<p>公关负责人</p>
+										<p>战略合作与传播总监<br>Director of Strategic Partnerships and Communications</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -172,7 +174,7 @@
 										</div>
 										<div class="person-info">
 										<h3>Toby Zhao</h3>
-										<p>运营负责人</p>
+										<p>传媒总监<br>Media Director</p>
 										<!--<a href="#" class="special">了解更多</a>-->
 										</div>
 									</div>
@@ -261,23 +263,33 @@
 							</section>
 						-->
 							<article id="gallery">
-								<h2 class="major">探索我们的摄影作品</h2>
+								<h2 class="major">Explore our gallery</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<a href="gallery.html" class="button">进入图库</a>
+								<a href="gallery.html" class="button">Explore Gallery</a>
+								<p></p>
+								<p>We believe in the power of images to preserve memory, spark reflection, and bring people closer together.</p>
 								<p>我们的图库收录了在会摄影师拍摄的珍贵影像，记录下社区生活、文化传统与社会变迁的真实瞬间。我们希望用影像守护记忆、启发行动、连接彼此。</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">联系我们</h2>
+								<h2 class="major">Contact Us</h2>
 								<ul class="icons">
 										<li><strong>我们期待与您的合作！</strong></li><br>
 										<li><strong>If you're interested in parterning with us, we’d love to hear from you!</strong></li><br>
 										<li><a href="mailto: pr@asianphotoassociation.com" class="icon solid fa-envelope"><span class="label">Email</span></a> <strong> pr@asianphotoassociation.com</strong></li>
 								</ul>
 								<div>
-									<h3>加入会员请扫码</h3>
+									<strong>加入会员请扫码</strong><br>
+									<strong>Scan the QRcode to join us!</strong><br>
 									<span class="person-avatar"><img src="images/application_form.png" alt="" style="width: 150px; height: 150px;"/></span>
+								</div>
+								<br>
+								<div>
+									<strong>请扫描下方二维码进行捐款，感谢您的支持！</strong><br>
+									<strong>You can make a donation by scanning the QR code below. Thank you for your support!</strong><br>
+									<span class="image main"><img src="images/donation.jpeg" alt="" style="width: 350px; height: 400px;"/></span>
+
 								</div>
 								
 								<!--form 
